--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -9,20 +9,22 @@
     <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
 </head>
 <body>
-	<nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header">
-            <a class="navbar-brand" th:href="@{/}">BURU</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <a th:href="@{/login}" >ログイン</a>
-                </li>
-                <li>
-                    <a th:href="@{/userRaegistlation}" >ユーザー登録</a>
-                </li>
-            </ul>
-        </div>
-</nav>
+	<header>
+		<nav class="navbar navbar-inverse" role="navigation">
+	        <div class="navbar-header">
+	            <a class="navbar-brand" th:href="@{/}">BURU</a>
+	        </div>
+	        <div class="collapse navbar-collapse">
+	            <ul class="nav navbar-nav navbar-right">
+	                <li>
+	                    <a th:href="@{/login}" >ログイン</a>
+	                </li>
+	                <li>
+	                    <a th:href="@{/userRaegistlation}" >ユーザー登録</a>
+	                </li>
+	            </ul>
+	        </div>
+		</nav>
+	</header>
 </body>
 </html>
