--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -4,27 +4,105 @@
 	<meta charset="UTF-8">
 	<title>商品一覧</title>
 	<!--  Bootstrapの設定 -->
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" ></link>
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" ></link>
     <script type="text/javascript" th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
+    <!--  CSSの設定 -->
+    <link th:href="@{/css/bookList.css}" rel="stylesheet"></link>
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-inverse" role="navigation">
+		<nav class="nav navbar-expand-md navbar navbar-dark bg-dark" role="navigation">
 	        <div class="navbar-header">
 	            <a class="navbar-brand" th:href="@{/}">BURU</a>
 	        </div>
-	        <div class="collapse navbar-collapse">
-	            <ul class="nav navbar-nav navbar-right">
-	                <li>
-	                    <a th:href="@{/login}" >ログイン</a>
-	                </li>
-	                <li>
-	                    <a th:href="@{/userRaegistlation}" >ユーザー登録</a>
+	        <div>
+	            <ul class="navbar-nav">
+	                <li class="nav-item">
+	                    <a class="nav-link" th:href="@{/login}">ログイン</a>
+	                </li >
+	                <li class="nav-item">
+	                    <a class="nav-link" th:href="@{/userRaegistlation}">ユーザー登録</a>
 	                </li>
 	            </ul>
 	        </div>
-		</nav>
+	        <form class="ml-auto form-inline">
+	        	<input class="form-control mr-sm-2" type="search" >
+	        	<button type="submit" class="btn btn-success my-2 my-sm-0">検索</button>
+	        </form>
+	      </nav>
 	</header>
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="card-group">
+	      			<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="card-group">
+	      			<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="card">
+							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
+							<div class="card-body">
+							    <h5 class="card-title">アイロン</h5>
+							    <p class="card-text">&yen;5,000</p>
+				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				  			</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 </html>
