--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -38,8 +38,8 @@
 				<div class="card-group">
 	      			<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
@@ -48,8 +48,8 @@
 					</div>
 					<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
@@ -58,8 +58,8 @@
 					</div>
 					<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
@@ -72,8 +72,8 @@
 				<div class="card-group">
 	      			<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
@@ -82,8 +82,8 @@
 					</div>
 					<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
@@ -92,8 +92,8 @@
 					</div>
 					<div class="col-lg-4">
 						<div class="card">
-							<img class="card-header" th:src="@{/imgs/iron.jpg}" alt="アイロン">
-							<div class="card-body">
+							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
+							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title">アイロン</h5>
 							    <p class="card-text">&yen;5,000</p>
 				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
