--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -38,7 +38,7 @@
 				<div class="card-group"  >
 	      			<div class="col-lg-4" th:each="book:${bookList}">
 						<div class="card">
-							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{${book.image}}" alt="アイロン"/></a>
+							<a class="card-header" th:href="@{'/bookDetail/' + ${book.bookId}}"><img class="w-100" th:src="@{${book.image}}" alt="アイロン"/></a>
 							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title" th:text="${book.bookName}"></h5>
 							    <p class="card-text" th:text="${book.price}">&yen;5,000</p>
@@ -48,40 +48,6 @@
 					</div>
 				</div>
 			</div>
-		   <!--   <div class="row">
-				<div class="card-group">
-	      			<div class="col-lg-4">
-						<div class="card">
-							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
-							<div class="card-body" th:href="@{/}">
-							    <h5 class="card-title">アイロン</h5>
-							    <p class="card-text">&yen;5,000</p>
-				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
-				  			</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="card">
-							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
-							<div class="card-body" th:href="@{/}">
-							    <h5 class="card-title">アイロン</h5>
-							    <p class="card-text">&yen;5,000</p>
-				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
-				  			</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="card">
-							<a class="card-header" th:href="@{/}"><img class="w-100" th:src="@{/imgs/iron.jpg}" alt="アイロン"/></a>
-							<div class="card-body" th:href="@{/}">
-							    <h5 class="card-title">アイロン</h5>
-							    <p class="card-text">&yen;5,000</p>
-				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
-				  			</div>
-						</div>
-					</div>
-				</div>
-			</div> -->
 		</div>
 	</main>
 </body>
