--- a/src/main/resources/templates/books/addBooks.html
+++ b/src/main/resources/templates/books/addBooks.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<title>商品一覧</title>
+	<title>出品画面</title>
 	<!--  Bootstrapの設定 -->
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" ></link>
     <script type="text/javascript" th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
@@ -40,21 +40,50 @@
 	</header>
 	<main>
 		<div class="container">
-			<div class="row">
-				<div class="card-group"  >
-	      			<div class="col-lg-4" th:each="book:${bookList}">
-						<div class="card">
-							<a class="card-header" th:href="@{'/bookDetail/' + ${book.bookId}}"><img class="w-100" th:src="@{${book.image}}" alt="商品データがありません"/></a>
-							<div class="card-body" th:href="@{/}">
-							    <h5 class="card-title" th:text="${book.bookName}"></h5>
-							    <p class="card-text" th:text="${book.price}">&yen;5,000</p>
-				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
-				  			</div>
+	  		<div class="page-header text-center">
+	  			<h1>出品する</h1>
+	  		</div>
+	  		<div class="row">
+	  		<form method="post" th:action="@{/addBooks}" class="col-8 mx-auto" th:object="${addBooksForm}">
+				<table class="table table-bordered table-hover">
+					<tr>
+						<th class="active">書籍名</th>
+						<td class="active">
+						<div class="form-group">
+							<input type="text" class="form-control" th:field="*{bookName}"/>
 						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+						</td>
+					</tr>
+					<tr>
+						<th class="active">商品説明</th>
+						<td>
+						<div class="form-group" >
+							<textarea class="form-control" col="100" row="5" placeholder="新品、傷あり等" th:field="*{description}"></textarea>
+						</div>
+						</td>
+					</tr>
+					<tr>
+						<th class="active">出品価格</th>
+						<td>
+						<div class="form-group">
+							<input type="text" class="form-control" th:field="*{price}"/>
+						</div>
+						</td>
+					</tr>
+					<tr>
+						<th class="active">商品画像</th>
+						<td>
+							<div class="form-group" >
+								<input type="file"/>
+								<button type="submit">送信</button>
+							</div>
+						</td>
+					</tr>
+				</table>
+			<button class="btn btn-primary mx-auto d-block" type="submit">出品する</button>
+	  		</form>
+	  		</div>
+  		</div>
 	</main>
 </body>
 </html>
