--- a/src/main/resources/templates/books/bookDetail.html
+++ b/src/main/resources/templates/books/bookDetail.html
@@ -47,10 +47,10 @@
 						<div class=”form-group” style="display: inline-block">
 							<table class="table table-bordered table-hover form-group">
 								<tr>
-									<th class="info active">出品者</th>
+									<th class="info active">詳細</th>
 								 	<td>
 								 		<div class="form-group" >
-								 			<span class="form-control" th:text="*{bookId}"></span>
+								 			<span class="form-control" th:text="*{description}"></span>
 								 		</div>
 								 	</td>
 								 </tr>
