ユーザー登録機能実装

--- a/src/main/resources/templates/books/bookDetail.html
+++ b/src/main/resources/templates/books/bookDetail.html
@@ -47,6 +47,14 @@
 						<div class=”form-group” style="display: inline-block">
 							<table class="table table-bordered table-hover form-group">
 								<tr>
+									<th class="info active">出品者</th>
+								 	<td>
+								 		<div class="form-group" >
+								 			<span class="form-control" th:text="*{customerCode}"></span>
+								 		</div>
+								 	</td>
+								 </tr>
+								<tr>
 									<th class="info active">詳細</th>
 								 	<td>
 								 		<div class="form-group" >
