--- a/src/main/resources/templates/books/exhibitedBooks.html
+++ b/src/main/resources/templates/books/exhibitedBooks.html
@@ -22,7 +22,7 @@
 	                    <a class="nav-link" th:href="@{/login}">ログイン</a>
 	                </li >
 	                <li class="nav-item">
-	                    <a class="nav-link" th:href="@{/customers}">ユーザー登録</a>
+	                    <a class="nav-link" th:href="@{/userRaegistlation}">ユーザー登録</a>
 	                </li>
 	                <li class="nav-item dropdown">
 	                    <a class="nav-link dropdown-toggle" th:href="@{/userRaegistlation}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">マイページ</a>
