ログイン、ログアウト機能の実装及び認証情報の表示

--- a/src/main/resources/templates/customers/signupCustomers.html
+++ b/src/main/resources/templates/customers/signupCustomers.html
@@ -50,7 +50,7 @@
 						<th class="active">ユーザー名</th>
 						<td class="active">
 						<div class="form-group">
-							<input type="text" class="form-control" th:field="*{customerName}"/>
+							<input type="text" class="form-control" th:field="*{customerCode}"/>
 						</div>
 						</td>
 					</tr>
