--- a/src/main/resources/templates/books/exhibitedBookList.html
+++ b/src/main/resources/templates/books/exhibitedBookList.html
@@ -44,13 +44,14 @@
 		<div class="container">
 			<div class="row">
 				<div class="card-group"  >
-	      			<div class="col-lg-4" th:each="book:${bookList}">
+	      			<div class="col-lg-4" th:each="book:${exibitedbookList}">
 						<div class="card">
-							<a class="card-header" th:href="@{'/bookDetail/' + ${book.bookId}}"><img class="w-100" th:src="@{${book.image}}" alt="商品データがありません"/></a>
+							<a class="card-header" th:href="@{'/updateBook/' + ${book.bookId}}"><img class="w-100" th:src="@{${book.image}}" alt="商品データがありません"/></a>
 							<div class="card-body" th:href="@{/}">
 							    <h5 class="card-title" th:text="${book.bookName}"></h5>
 							    <p class="card-text" th:text="${book.price}">&yen;5,000</p>
-				    			<a th:href="@{/}" class="btn btn-outline-success">いいね</a>
+				    			<a th:href="@{'/updateBook/' + ${book.bookId}}" class="btn btn-warning">編集</a>
+				    			<a th:href="@{/deleteBook}" class="btn btn-danger">出品とりやめ</a>
 				  			</div>
 						</div>
 					</div>
