--- a/src/main/resources/templates/books/exhibitedBookList.html
+++ b/src/main/resources/templates/books/exhibitedBookList.html
@@ -51,7 +51,7 @@
 							    <h5 class="card-title" th:text="${book.bookName}"></h5>
 							    <p class="card-text" th:text="${book.price}">&yen;5,000</p>
 				    			<a th:href="@{'/updateBook/' + ${book.bookId}}" class="btn btn-warning">編集</a>
-				    			<a th:href="@{/deleteBook}" class="btn btn-danger">出品とりやめ</a>
+				    			<a th:href="@{'/deleteBook/' + ${book.bookId}}" class="btn btn-danger">出品とりやめ</a>
 				  			</div>
 						</div>
 					</div>
